# learning

./: .gitignore
pybites/: pyproject.toml
pybites/a-countdown-generator/: bite.html  countdown.py
pybites/a-little-detour-pydantic/: bite.html  models.py  test_models.py
pybites/analyze-some-basic-car-data/: bite.html  cars.py
pybites/analyze-stock-data/: bite.html  stocks.py
pybites/armstrong-numbers/: armstrong.py  bite.html
pybites/beautifulsoup-ii-scrape-us-holidays/: bite.html  holidays.py
pybites/bloodtypes/: bite.html  bt.py
pybites/check-if-two-words-are-anagrams/: anagram.py  bite.html
pybites/complete-a-tox-ini-file-parser-class/: bite.html  ini.py
pybites/complete-a-user-class-properties-and-representation-dunder-methods/: bite.html  user.py
pybites/convert-an-amazon-url-into-an-affiliation-link/: affiliation.py  bite.html
pybites/convert-dict-to-namedtuplejson/: bite.html  dict_convert.py
pybites/count-the-number-of-files-and-directories/: bite.html  tree.py
pybites/create-a-rgb-to-hex-converter/: bite.html  rgb2hex.py
pybites/create-a-sandwich-decorator/: bite.html  sandwich.py
pybites/create-a-variable-length-chessboard/: bite.html  chessboard.py
pybites/create-food-objects/: a.py  bite.html  test_a.py
pybites/decode-base64-encoded-data/: bite.html  decode.py
pybites/extract-users-dict-from-a-multiline-string/: bite.html  users.py
pybites/fastapi-authentication-with-jwt-json-web-tokens/: a.py  bite.html  test_a.py
pybites/fastapi-exception-handling/: a.py  bite.html  test_a.py
pybites/fastapi-hello-world/: a.py  (+2 more)
(+178 files in other folders)
