[project]
name = "pybites"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi[standard]>=0.122.0",
    "freezegun>=1.5.5",
    "mutpy>=0.6.1",
    "pandas>=2.3.3",
    "passlib>=1.7.4",
    "pydantic>=2.12.5",
    "pyjwt>=2.10.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "python-jose[cryptography]>=3.5.0",
    "requests>=2.32.5",
    "typer>=0.20.0",
]
